update styles(hide collapse if we switch to mobile version && fix bloken deveider in card) and change devider place

--- a/pages/busesMaterial/SingleCard.Collapse.module.scss
+++ b/pages/busesMaterial/SingleCard.Collapse.module.scss
@@ -105,3 +105,9 @@
 .text_primary{
   
 }
+
+@media only screen and (max-width: 667px) {
+  .tabPanel {
+    display: none;
+  }
+}
